[gd_scene load_steps=3 format=3 uid="uid://cny6myvfvi0k7"]

[ext_resource type="Script" path="res://Scenes/Levels/Elements/door_key.gd" id="1_dl3ru"]
[ext_resource type="PackedScene" uid="uid://c064xhq6au0sf" path="res://Scenes/Over_Lap/Persistence_Data_Handler/PersistenceDataHandler.tscn" id="3_nbg5i"]

[node name="Door_Key" type="Node2D"]
process_mode = 3
position = Vector2(32, 2)
script = ExtResource("1_dl3ru")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -44)
hframes = 7

[node name="Detection_Zone" type="Area2D" parent="."]
position = Vector2(0, -56)
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="Is_Open" parent="." instance=ExtResource("3_nbg5i")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, -44)
collision_layer = 16
collision_mask = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
